--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,2 @@
-@import url('./userTable.css');
-@import url('./loadingcircle.css');
+@import url('./styles/userTable.css');
+@import url('./styles/loadingcircle.css');
